alignement fix

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -5,16 +5,16 @@
 
 body {
     background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.titel{
+.titel {
     color: white;
     font-weight: bolder;
     text-align: center;
     font-size: 32px;
     margin-top: 100px;
 }
-
 /*-----------------Section--header--------------*/
 
 header {
@@ -32,7 +32,7 @@ header {
 
 nav a {
     color: white;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: bolder;
     padding-left: 10px;
     text-decoration: none;
@@ -80,7 +80,7 @@ nav a {
     padding-left: 100px;
 }
 
-.podcast-info{
+.podcast-info {
     padding-top: 100px;
 }
 
@@ -95,7 +95,7 @@ nav a {
 
 /* Gast podcast */
 
-.podcast--gast{
+.podcast--gast {
     display: flex;
     gap: 300px;
 }
@@ -184,7 +184,7 @@ button {
     text-align: center;
 }
 
-.ruimte{
+.ruimte {
     margin-top: 50px;
 }
 
@@ -235,7 +235,7 @@ button {
 
 /* Presentation */
 
-.presentation{
+.presentation {
     margin-top: 50px;
     display: flex;
     justify-content: center;
@@ -243,13 +243,15 @@ button {
 }
 
 .img--presentation {
-    width: 505px;
+    width: 515px;
+
 }
 
 .tekst--rood {
     color: red;
-    padding-top: 65px;
+    padding-top: 35px;
     font-size: 21px;
+
 }
 
 .tekst--presentatie {
@@ -269,10 +271,10 @@ button {
 
 /* Workshop */
 
-.workshop{
+.workshop {
     display: flex;
-    justify-content: center; 
-    gap: 50px;
+    justify-content: center;
+    gap: 20px;
 }
 
 .img--workshop {
@@ -283,6 +285,7 @@ button {
     color: white;
     font-size: 21px;
 }
+
 /*Over mij */
 
 .over--mij {
@@ -346,3 +349,19 @@ button {
     text-align: center;
     font-size: 20px;
 }
+
+/* Mobiele apparaten (kleiner dan 768px) */
+@media only screen and (max-width: 767px) {
+    .img--boek{
+        display: none;
+    }
+}
+
+/* Tablets (768px - 1023px) */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {}
+
+/* Desktops (1024px - 1439px) */
+@media only screen and (min-width: 1024px) and (max-width: 1439px) {}
+
+/* Grote schermen (1440px en hoger) */
+@media only screen and (min-width: 1440px) {}
